AppInmobiliaria/force-app/main/default/objects/Property__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>España</fullName>
                <default>true</default>
                <label>España</label>
            </value>
            <value>
                <fullName>Portugal</fullName>
            </value>
            <value>
                <fullName>Francia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>