AppInmobiliaria/force-app/main/default/objects/Property__c/fields/Doorman__c.field-meta.xml
<CustomField>
    <fullName>Doorman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doorman</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Edificios</relationshipName>
    <type>Lookup</type>
</CustomField>