AppInmobiliaria/force-app/main/default/objects/Property__c/fields/Has_Elevator__c.field-meta.xml
<CustomField>
    <fullName>Has_Elevator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Elevator</label>
    <type>Checkbox</type>
</CustomField>