AppInmobiliaria/force-app/main/default/objects/Property__c/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <label>Neighborhood</label>
    <length>255</length>
    <type>Text</type>
</CustomField>