AppInmobiliaria/force-app/main/default/objects/Property__c/fields/Property_Reference__c.field-meta.xml
<CustomField>
    <fullName>Property_Reference__c</fullName>
    <displayFormat>PRP-{00000}</displayFormat>
    <label>Property Reference</label>
    <type>AutoNumber</type>
</CustomField>