AppInmobiliaria/force-app/main/default/objects/Property__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <label>State / Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provincias_Espana</valueSetName>
    </valueSet>
</CustomField>