AppInmobiliaria/force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property_Reference__c</columns>
    <columns>Street__c</columns>
    <columns>State_Province__c</columns>
    <columns>City__c</columns>
    <columns>Neighborhood__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Doorman__c</columns>
    <columns>Has_Elevator__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>