AppInmobiliaria/force-app/main/default/objects/Property__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Street__c</columns>
    <columns>State_Province__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Doorman__c</columns>
    <columns>Has_Elevator__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>